# vision

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  configure.sh
examples/: blur_and_write.py  blur_and_write.scm
lib/: AtomSpaceVisionConfig.cmake.in  AtomSpaceVisopsConfig.cmake.in  CMakeLists.txt
opencog/: CMakeLists.txt
opencog/atoms/: CMakeLists.txt
opencog/atoms/vision/: CMakeLists.txt  ImageBlurLink.cpp  ImageBlurLink.hpp  ImageFilter2DLink.cpp  ImageFilter2DLink.hpp  ImageHalfSizeLink.cpp  ImageHalfSizeLink.hpp  ImageNode.cpp  ImageNode.hpp  ImageRectangleLink.cpp  ImageRectangleLink.hpp  ImageValue.cpp  ImageValue.hpp  ImageWriteLink.cpp  ImageWriteLink.hpp  atom_types.script  atom_types_init.cc  vision.pyx  vision.scm
opencog/atoms/vision/atom-types/: CMakeLists.txt  ImageNode.cpp  ImageNode.hpp  ImageValue.cpp  ImageValue.hpp
